# MetroCastAI

./: .dockerignore  .env.example  .gitignore  README.md  config.yaml  dockerfile  generate_payload.py  main.py  pyproject.toml  requirements.prod.txt  requirements.txt
.github/workflows/: daily-data-fetch.yml  deploy.yml
backend/: .dockerignore  Cargo.toml  dockerfile  test_payload.json
backend/src/: handlers.rs  inference.rs  main.rs  preprocess.rs  schemas.rs
data/: fetch_data.py  update_data.py
data/processed/: statistics.json  statistics.npy
models/: best_model.onnx  best_model.onnx.data  final_model.onnx  final_model.onnx.data
notebooks/: 01_eda.ipynb
src/app/: example_main.py
src/training/: calculate_std_mean.py  dataset.py  export_onnx.py  model.py  train.py
src/utils/: inverse_transform.py  logger.py  npy_to_json.py  s3_client.py
tests/: test_dataset.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ControlBar.tsx  CurrentWeather.tsx  DailyForecast.tsx  DataEntryModal.tsx  ForecastChart.tsx  Header.tsx  HourlyForecast.tsx  InputControl.tsx  IntelligenceConsole.tsx  ProjectInfo.tsx  RequestBuilder.tsx  WeatherTabs.tsx
web/src/services/: api.ts  s3Service.ts  wandbService.ts
web/src/store/: useWeatherStore.ts
web/src/utils/: sampleData.ts  translations.ts
