[project]
name = "metrocastai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.30",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "onnx>=1.20.1",
    "onnxscript>=0.5.7",
    "pandas>=2.3.3",
    "pyaml>=25.7.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]
