[package]
name = "backend"
version = "2.0.0" 
edition = "2024"  

[profile.release]
lto = true       
strip = true      
codegen-units = 1 
panic = "abort"   

[dependencies]
axum = { version = "0.7", features = ["macros"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"

ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "ndarray"] }

tower-http = { version = "0.5", features = ["cors", "fs"] } 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }