[package]
name = "backend"
version = "2.0.0" 
edition = "2021"  

[profile.release]
lto = true       
strip = true      
codegen-units = 1 
panic = "abort"   

[dependencies]
axum = { version = "0.7", features = ["macros"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
ndarray = "0.15"

ort = { version = "=2.0.0-rc.9" }

tower-http = { version = "0.5", features = ["cors", "fs", "trace"] } 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }

[dependencies.utoipa]
version = "4.2"
features = ["axum_extras", "chrono"]

[dependencies.utoipa-swagger-ui]
version = "7.1"
features = ["axum"]